--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 125dvh;
+    min-height: 1100px;
     width: 100%;
     background-image: url("images/doodle.png");
     z-index: -1;
@@ -137,7 +137,7 @@ footer {
 
 @media only screen and (min-width: 680px) {
     .bg {
-        height: 110dvh;
+        min-height: 1200px;
     }
 
     .container {
@@ -156,7 +156,7 @@ footer {
 
 @media only screen and (min-width: 920px) {
     .bg {
-        height: 100dvh;
+        min-height: 1100px;
     }
 
     .container {
@@ -181,28 +181,6 @@ footer {
             .cta {
                 a {
                     font-size: 22px;
-                }
-            }
-        }
-    }
-}
-
-
-@media only screen and (min-width: 1080px) {
-    .bg {
-        height: 130dvh;
-    }
-
-    .container {
-        .left {
-            input[type='color'] {
-                width: 80px;
-                height: 80px;
-            }
-    
-            .cta {
-                a {
-                    font-size: 24px;
                 }
             }
         }
